changed education section, troubleshooting mobile header photo

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 <img class="coda-background-img" src="img/roma3b.jpg" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
-                        <div class="row align-items-center justify-content-between">
+                        <div class="row align-items-right justify-content-between">
                             <!-- logotype -->
                             <div class="col-auto">
                                 <div class="coda-logo">
@@ -403,8 +403,8 @@
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2004 - 2007</p>
-                                        <h3>College</h3>
+                                        <p class="coda-time-interval">2006 - 2010</p>
+                                        <h3>George Fox University</h3>
                                     </header>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid aut autem, cupiditate dolorum ea et, exercitationem harum, impedit ipsa iusto quaerat suscipit unde voluptas. Debitis deserunt dolorum error labore sapiente.</p>
                                     <p>Nesciunt perspiciatis quas quasi quis rem repudiandae saepe! Accusamus aperiam delectus ea eius eos facilis ipsam itaque maiores molestiae molestias natus necessitatibus omnis placeat provident, quas quasi quisquam soluta velit voluptate voluptatem. Accusantium consectetur debitis nam nemo perspiciatis.</p>
@@ -413,11 +413,10 @@
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">1995 - 2004</p>
-                                        <h3>School</h3>
+                                        <p class="coda-time-interval">1993 - 2006</p>
+                                        <h3>Portland Public Schools</h3>
                                     </header>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate eaque id iusto minima mollitia, quos!</p>
-                                    <p>A accusantium aliquam, blanditiis corporis dolore eos ipsam iusto perferendis, praesentium quisquam quos, tempore totam ullam veritatis voluptas.</p>
+                                    <p>I went through the Portland Public Schools and am so thankful for the teachers and staff that influenced my life and inspired me to pursue further education and to pursue my passion for the arts</p>
                                 </article>
                                 <!-- end experience description article -->
                             </div>
@@ -666,7 +665,7 @@
                                 <header class="coda-pop-up-header">
                                     <h3>About me</h3>
                                 </header>
-                                <p>I was born in Russia, but grew up in Southeast Portland, Oregon.</p>
+                                <p>I was born in Russia, but grew up in Southeast Portland, Oregon. I've been married to the love of my life Samy, for over 7 years and we have two beautiful kids, Moses & Maeve!</p>
                                 <p>I have worked in product development/management over the last few years. I love using technology to solve real problems both in the workplace and at home.</p>
                                 <p>My main areas of expertise and skill are Product Ideation & Visioning.</p>
                                 <footer class="coda-pop-up-footer">
