troubleshooting header image in mobile cont'd

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
             <!-- Start Header -->
             <header id="coda-about" class="coda-header" style="background-image: url(img/roma3b.jpg);" >
                 <!-- header background image -->
-                <img class="coda-background-img" src="img/roma3b.jpg" alt="header image">
+                <img class="coda-background-img" align=right src="img/roma3b.jpg" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
-                        <div class="row align-items-right justify-content-between">
+                        <div class="row align-items-center justify-content-between">
                             <!-- logotype -->
                             <div class="col-auto">
                                 <div class="coda-logo">
