new photo for routemizer section

--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                                 <li class="coda-filter-nav-item coda-underscore" data-filter="1">Product Development</li>
                                 <li class="coda-filter-nav-item coda-underscore" data-filter="2">Design</li>
                                 <li class="coda-filter-nav-item coda-underscore" data-filter="3">Business Process Analysis</li>
+                                <li class="coda-filter-nav-item coda-underscore" data-filter="4">Other Ventures</li>
                             </ul>
                         </div>
                         <!-- end portfolio filter navigation -->
@@ -181,10 +182,34 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/rytsarlogo2.png" alt="rytsar">
+                                <img class="coda-img" src="img/rytsarlogo2.png" alt="rytsar" href="#travel">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#travel" class="coda-underscore coda-pop-up-btn">Rytsar Web Application</a></h3>
+                                        <h3><a href="#travel" class="coda-underscore coda-pop-up-btn">Rytsar Application</a></h3>
+                                    </header>
+                                </div>
+                            </div>
+                        </article>
+                        <!-- end portfolio item, article -->
+                        <!-- portfolio item, article -->
+                        <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
+                            <div class="coda-portfolio-item">
+                                <img class="coda-img" src="img/routemizer7.png" alt="routemizer7">
+                                <div class="coda-portfolio-item-content">
+                                    <header class="coda-portfolio-item-header">
+                                        <h3><a href="#expedition" class="coda-underscore coda-pop-up-btn">RouteMizer Application</a></h3>
+                                    </header>
+                                </div>
+                            </div>
+                        </article>
+                        <!-- end portfolio item, article -->
+                        <!-- portfolio item, article -->
+                        <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
+                            <div class="coda-portfolio-item">
+                                <img class="coda-img" src="img/trainingcenter5.png" alt="trainingcenter3">
+                                <div class="coda-portfolio-item-content">
+                                    <header class="coda-portfolio-item-header">
+                                        <h3><a href="#desert" class="coda-underscore coda-pop-up-btn">bMobile Route Training Center</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -196,31 +221,7 @@
                                 <img class="coda-img" src="img/watchtower.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#expedition" class="coda-underscore coda-pop-up-btn">Payroll Leave Solution</a></h3>
-                                    </header>
-                                </div>
-                            </div>
-                        </article>
-                        <!-- end portfolio item, article -->
-                        <!-- portfolio item, article -->
-                        <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
-                            <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
-                                <div class="coda-portfolio-item-content">
-                                    <header class="coda-portfolio-item-header">
-                                        <h3><a href="#desert" class="coda-underscore coda-pop-up-btn">The desert</a></h3>
-                                    </header>
-                                </div>
-                            </div>
-                        </article>
-                        <!-- end portfolio item, article -->
-                        <!-- portfolio item, article -->
-                        <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
-                            <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
-                                <div class="coda-portfolio-item-content">
-                                    <header class="coda-portfolio-item-header">
-                                        <h3><a href="#weather" class=" coda-underscore coda-pop-up-btn">Weather service</a></h3>
+                                        <h3><a href="#weather" class=" coda-underscore coda-pop-up-btn">Payroll Leave Solution</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -232,7 +233,7 @@
                                 <img class="coda-img" src="img/demo-img.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#consequuntu" class="coda-underscore coda-pop-up-btn">Consequuntu</a></h3>
+                                        <h3><a href="#consequuntu" class="coda-underscore coda-pop-up-btn">Music Composition & Production</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -244,7 +245,7 @@
                                 <img class="coda-img" src="img/demo-img.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#quod" class="coda-underscore coda-pop-up-btn">Quod veritatis</a></h3>
+                                        <h3><a href="#quod" class="coda-underscore coda-pop-up-btn">Payroll Leave Solution</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -280,7 +281,7 @@
                                 <img class="coda-img" src="img/demo-img.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#adipisicing" class="coda-underscore coda-pop-up-btn">Adipisicing elit</a></h3>
+                                        <h3><a href="#adipisicing" class="coda-underscore coda-pop-up-btn">Music Composition & Production</a></h3>
                                     </header>
                                 </div>
                             </div>
