Changed about me section

--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
                                 <header class="coda-pop-up-header">
                                     <h3>About me</h3>
                                 </header>
-                                <p>I was born in Russia, but grew up in Southeast Portland, Oregon. I've been married to the love of my life Samy, for over 7 years and we have two beautiful kids, Moses & Maeve!</p>
+                                <p>I was born in Russia, but grew up in Southeast Portland, Oregon. I studied music theory and composition at George Fox University and earned a Bachelor's of Arts.</p>
                                 <p>I have worked in product development/management over the last few years. I love using technology to solve real problems both in the workplace and at home.</p>
                                 <p>My main areas of expertise and skill are Product Ideation & Visioning.</p>
                                 <footer class="coda-pop-up-footer">
