added icon and favicon

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
         <!-- Start Template Basic Images -->
         <meta property="og:image" content="img/demo-img.jpg">
-        <link rel="icon" href="img/favicon/favicon.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
+        <link rel="icon" href="img/favicon/rkfavicon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/rkicon.png">
         <!-- End Template Basic Images -->
 
         <!-- Start Custom Browsers Color -->
