Working on portfolio, adding photos and descriptions

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="1" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/routemizer7.png" alt="routemizer7">
+                                <img class="coda-img" src="img/try23.jpg" alt="routemizer7">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
                                         <h3><a href="#expedition" class="coda-underscore coda-pop-up-btn">RouteMizer Application</a></h3>
@@ -230,10 +230,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="2" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/WarehouseImage.jpg" alt="warehouse1">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#consequuntu" class="coda-underscore coda-pop-up-btn">Music Composition & Production</a></h3>
+                                        <h3><a href="#consequuntu" class="coda-underscore coda-pop-up-btn">Warehouse Management Application</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -242,10 +242,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="2" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/AdobeStock_107324814.jpeg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#quod" class="coda-underscore coda-pop-up-btn">Payroll Leave Solution</a></h3>
+                                        <h3><a href="#quod" class="coda-underscore coda-pop-up-btn">Infographics</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -266,10 +266,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="3" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/schoenberg.jpeg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#debitis" class="coda-underscore coda-pop-up-btn">Consequuntu debitis</a></h3>
+                                        <h3><a href="#debitis" class="coda-underscore coda-pop-up-btn">Schoenberg Schönberg Podcast</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -278,10 +278,10 @@
                         <!-- portfolio item, article -->
                         <article class="col-lg-6 col-12 filtr-item coda-filter-item" data-category="3" data-sort="value">
                             <div class="coda-portfolio-item">
-                                <img class="coda-img" src="img/demo-img.jpg" alt="sample">
+                                <img class="coda-img" src="img/BlueSky.jpg" alt="sample">
                                 <div class="coda-portfolio-item-content">
                                     <header class="coda-portfolio-item-header">
-                                        <h3><a href="#adipisicing" class="coda-underscore coda-pop-up-btn">Music Composition & Production</a></h3>
+                                        <h3><a href="#adipisicing" class="coda-underscore coda-pop-up-btn">Music Creation</a></h3>
                                     </header>
                                 </div>
                             </div>
@@ -750,7 +750,7 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/rytsarweb.jpg" alt="rytsarweb">
+                                <img class="coda-img-responsive" src="img/try23.jpg" alt="rytsarweb">
                                 <img class="coda-img-responsive" src="img/rytsarapp.jpg" alt="rytsarapp">
                             </div>
                         </div>
@@ -1196,29 +1196,23 @@
                         <div class="col-md-5 col-12">
                             <div class="coda-sticky">
                                 <header class="coda-pop-up-header">
-                                    <h3>Consequuntu debitis</h3>
+                                    <h3>Schoenberg Schönberg</h3>
                                 </header>
-                                <p>Aspernatur assumenda autem eum harum ipsum. Cupiditate itaque nesciunt odio officiis quod.</p>
-                                <p>Illo magnam minus perferendis tempore! Ea exercitationem qui reiciendis? Accusantium aliquam aspernatur beatae dicta distinctio ea necessitatibus nemo numquam officiis placeat porro quidem rem rerum, similique sit.</p>
-                                <p>Animi consectetur deleniti, eius facilis itaque laboriosam molestias placeat provident qui sequi soluta ullam.</p>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores debitis deserunt eum itaque, minus non nostrum officiis quod repudiandae voluptatem!</p>
+                                <p>My friend Ben and I discuss a different piece of classical music, giving it our own unique take. We talk about hipster genius, Gustav Mahler and his 9th Symphony, our buddy Rachmaninoff, and how Sibelius brought me to tears, well, maybe just that one time..</p>
+                                <p>Find this podcast on iTunes, or anywhere you listen to podcasts, or click on this link (https://schonberg.podbean.com) to go directly to it.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">categories:</dt>
-                                            <dd class="coda-description-data">illustration</dd>
+                                            <dd class="coda-description-data">Other Ventures</dd>
                                         </div>
                                         <div class="coda-description-item">
                                             <dt class="coda-description-name">project by:</dt>
-                                            <dd class="coda-description-data">Andrew Owens</dd>
+                                            <dd class="coda-description-data">Ben Tissell & Roman Kolyvanov</dd>
                                         </div>
                                         <div class="coda-description-item">
-                                            <dt class="coda-description-name">client:</dt>
-                                            <dd class="coda-description-data">SomeOne</dd>
-                                        </div>
-                                        <div class="coda-description-item">
-                                            <dt class="coda-description-name">made in:</dt>
-                                            <dd class="coda-description-data">december 2017</dd>
+                                            <dt class="coda-description-name">Started in:</dt>
+                                            <dd class="coda-description-data">September 2016</dd>
                                         </div>
                                     </dl>
                                 </footer>
@@ -1226,7 +1220,7 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
+                                <img class="coda-img-responsive" src="img/schoenberg.jpeg" alt="text">
                             </div>
                         </div>
                     </div>
