Updated work experience descriptions.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <div class="row align-items-center vh100">
                             <div class="col-md-6 col-10">
                                 <!-- profession -->
-                                <p class="coda-profession">Efficiency Analyst & Digital Product Manager</p>
+                                <p class="coda-profession">Digital Product Management & UX Design</p>
                                 <!-- end profession -->
                                 <!-- first name, last Name -->
                                 <h1 class="coda-name">Roman Kolyvanov</h1>
@@ -188,7 +188,7 @@
                                 <!-- end experience timeline caption -->
                                 <!-- experience timeline caption -->
                                 <div class="coda-experience-timeline-caption">
-                                    <p class="coda-time-interval">2017 - 2018</p>
+                                    <p class="coda-time-interval">2017 - present</p>
                                     <h4 class="coda-underscore">Product Manager</h4>
                                 </div>
                                 <!-- end experience timeline caption -->
@@ -229,31 +229,38 @@
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2016 - present</p>
+                                        <p class="coda-time-interval">2017 - present</p>
                                         <h3>Freelance</h3>
                                     </header>
-                                    <p>At commodi, consequatur consequuntur corporis cumque deserunt distinctio doloribus explicabo facilis in ipsam ipsum laudantium maxime nihil quasi quibusdam sapiente sint? Explicabo fuga incidunt laboriosam molestiae quo reiciendis soluta, temporibus ullam voluptates!</p>
-                                    <p>A accusantium aliquam, blanditiis corporis dolore eos ipsam iusto perferendis, praesentium quisquam quos, tempore totam ullam veritatis voluptas. Animi aspernatur cum eos, est explicabo laudantium, nesciunt odit perspiciatis porro quisquam quo reiciendis sed temporibus, vel veniam! Beatae dolor dolore dolores inventore laudantium odio optio sed sunt. Nesciunt perspiciatis quas quasi quis rem repudiandae saepe.</p>
+                                    <p>Worked on various projects both in Product Management and UX Design capacities. Led stakeholder and user interviews, created user personas, analyzed user data, built information architecture, wireframes, and prototypes.</p>
+                                    <p>Fielded, generated, and built new product ideas. Developed use cases, wrote user stories, and defined acceptance criteria. Championed cross functional teams, including senior leadership, to align vision through execution.</p>
+                                    <p>Worked on the end-to-end design of software/web services including defining design goals, user research, workflows, wireframes, and prototypes. Analyzed user interface problems and lead a team in creating on-brand design solutions that met measurable business goals and requirements.</p>
+
                                 </article>
                                 <!-- end experience description article -->
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2010 - 2014</p>
-                                        <h3>Studio awesome</h3>
+                                        <p class="coda-time-interval">2017 - present</p>
+                                        <h3>Product Manager</h3>
                                     </header>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque cupiditate eaque id iusto minima mollitia, quos!</p>
-                                    <p>Beatae dolor dolore dolores inventore laudantium odio optio sed sunt. Nesciunt perspiciatis quas quasi quis rem repudiandae saepe! Accusamus aperiam delectus ea eius eos facilis ipsam itaque maiores molestiae molestias natus necessitatibus omnis placeat provident, quas quasi quisquam soluta velit voluptate voluptatem. Accusantium consectetur debitis nam nemo perspiciatis.</p>
+                                    <p>Architected a Learning Management System/Training Center for new and current clients of enterprise software by developing a complex Wordpress site including software documentation, FAQs, a video library, and a comprehensive implementation process involving over 20 training videos that I scripted and produced using Premiere Pro.</p>
+                                    <p>Worked with developers within agile sprints to redesign and update the UX and UI of half finished web app. Identified user stories and created and prioritized Jira tickets to finish version 2.0.  Redesigned look and feel of app to reflect Material Design principles. Created onboarding process to make sure new users could efficiently and effectively start using the product.</p>
+                                    <p>Collaborated with design and development teams to contribute in design, QA, and market research tasks. Facilitated leadership (specifically director of development) in completing tasks to launch app on Intuit App Store.</p>
+                                    <p>Created figma wireframes, simplifying complex procedures for industry specific user personas and followed Material Design principles to fast track design process.</p>
+                                    <p>Presented concepts and final deliverables to Product, Design, and Engineering teams, and executive stakeholders, with strong rationale for design directions and solutions. Collaborated with a variety of stakeholders, departments, and internal customers, winning confidence and building relationships that promoted partnership. Delivered on deadlines while managing multiple tracks of work.</p>
                                 </article>
                                 <!-- end experience description article -->
                                 <!-- experience description article -->
                                 <article class="coda-experience-description">
                                     <header class="coda-experience-article-header">
-                                        <p class="coda-time-interval">2007 - 2010</p>
-                                        <h3>Some work</h3>
+                                        <p class="coda-time-interval">2016 - 2018</p>
+                                        <h3>Efficiency Analyst</h3>
                                     </header>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error esse illo nobis nulla obcaecati perspiciatis possimus sit ullam vero, voluptatum?</p>
-                                    <p>Nesciunt perspiciatis quas quasi quis rem repudiandae saepe! Accusamus aperiam delectus ea eius eos facilis ipsam itaque maiores molestiae molestias natus necessitatibus omnis placeat provident, quas quasi quisquam soluta velit voluptate voluptatem. Accusantium consectetur debitis nam nemo perspiciatis.</p>
+                                    <p>Interviewed department heads to discuss potential solutions to specific inefficiencies, created lists of requirements, architected business workflows/systems, designed user interfaces with user experience elements in mind, tested and deployed solutions with documentation, continually striving to create long-term solutions instead of easy fixes.</p>
+                                    <p>Created complex systems to solve pain points throughout the district that resulted in successful efficiency growth including hundreds of hours of work saved through automation.</p>
+                                    <p>Solutions included: an Administrative Leave Reporting Tool, a District Calendaring System for schools and HR, a district-wide State Reporting Time-Triggered Auto-Email Reminder System, a Student Safety Check In/Out System used throughout the district, a Project & Task Manager Tool, as well as Input Systems that gathered data district-wide for reporting and data mining purposes.</p>
+                                    <p>Completed multiple large-scale state reports and audits involving over 100,000 records yearly.</p>
                                 </article>
                                 <!-- end experience description article -->
                             </div>
@@ -304,14 +311,14 @@
                         <div class="col-md-5 col-12 coda-skills-bar-container">
                             <!-- skill bar -->
                             <div class="coda-skill-bar" data-percent="94">
-                                <div class="coda-skill-bar-title">business analysis</div>
+                                <div class="coda-skill-bar-title">product management</div>
                                 <div class="coda-skill-bar-percent"><span class="coda-skill-count">94</span>%</div>
                                 <div class="coda-skill-bar-bar"></div>
                             </div>
                             <!-- end skill bar -->
                             <!-- skill bar -->
                             <div class="coda-skill-bar" data-percent="95">
-                                <div class="coda-skill-bar-title">ux/ui design</div>
+                                <div class="coda-skill-bar-title">ux design</div>
                                 <div class="coda-skill-bar-percent"><span class="coda-skill-count">95</span>%</div>
                                 <div class="coda-skill-bar-bar"></div>
                             </div>
@@ -334,6 +341,13 @@
                             <div class="coda-skill-bar" data-percent="91">
                                 <div class="coda-skill-bar-title">copywriting</div>
                                 <div class="coda-skill-bar-percent"><span class="coda-skill-count">91</span>%</div>
+                                <div class="coda-skill-bar-bar"></div>
+                            </div>
+                            <!-- end skill bar -->
+                            <!-- skill bar -->
+                            <div class="coda-skill-bar" data-percent="45">
+                                <div class="coda-skill-bar-title">ui design</div>
+                                <div class="coda-skill-bar-percent"><span class="coda-skill-count">45</span>%</div>
                                 <div class="coda-skill-bar-bar"></div>
                             </div>
                             <!-- end skill bar -->
@@ -1022,7 +1036,7 @@
                                 <header class="coda-pop-up-header">
                                     <h3>Pathway Application</h3>
                                 </header>
-                                <p>Redesigned User Interface for mobile warehouse management application involving picking warehouse inventory items for orders to be delivered.</p>
+                                <p>Redesigned UX for mobile warehouse management application involving picking warehouse inventory items for orders to be delivered.</p>
 
                                 <p>Created figma wireframe involving over 50 frames, simplifying a complex procedure for the warehouse pickers and following Material Design principles.</p>
                                 
