--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                     <div class="row">
                         <!-- section name -->
                         <div class="col-md-6 col-12">
-                            <p class="coda-description">my business analysis & design</p>
+                            <p class="coda-description">my product management & design</p>
                             <h2>Skills</h2>
                         </div>
                         <!-- end section name -->
@@ -359,61 +359,62 @@
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">figma</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">figma</span> - Figma is an amazing interface design tool based in the browser, used for UX/UI design, wireframing, and prototyping.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">figma</span> -  An amazing interface design tool based in the browser, used for UX/UI design, wireframing, and prototyping.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">css</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">css</span> - Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">css</span> - Cascading Style Sheets (CSS) is a style sheet language used for describing the presentation of a document written in a markup language like HTML.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">agile methodology</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">agile methodology</span> - The Agile Method is a particular approach to project management that is utilized in software development. This method uses incremental, iterative work sequences that are commonly known as sprints.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">agile methodology</span> - A particular approach to project management that is utilized in software development. This method uses incremental, iterative work sequences that are commonly known as sprints.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">sql</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">sql</span> - Syntactically awesome style sheets is a preprocessor scripting language that is interpreted or compiled into Cascading Style Sheets (CSS).</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">sql</span> - (Structured Query Language) is a standardized programming language used for managing relational databases and performing various operations on the data in them.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">wordpress</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">wordpress</span> - Bootstrap is a free and open-source front-end library for designing websites and web applications. It contains HTML- and CSS-based design templates for typography, forms, buttons, navigation and other interface components, as well as optional JavaScript extensions. Unlike many web frameworks, it concerns itself with front-end development only.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">wordpress</span> - An open source software you can use to create a beautiful website, blog, or app.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">user stories</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">user stories</span> - jQuery is a cross-platform JavaScript library designed to simplify the client-side scripting of HTML. It is free, open-source software using the permissive MIT License. Web analysis indicates that it is the most widely deployed JavaScript library by a large margin.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">user stories</span> - A user story is a tool used in Agile software development to capture a description of a software feature from an end-user perspective.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
-                                    <dt class="coda-skill-term-name"><span class="coda-underscore">google app script</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">google app script</span> - Gulp is a task runner built on Node.js and npm, used for automation of time-consuming and repetitive tasks involved in web development like minification, concatenation, cache busting, unit testing, linting, optimization, etc.</dd>
+                                    <dt class="coda-skill-term-name"><span class="coda-underscore">google apps script</span></dt>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">google apps script</span> - A JavaScript cloud scripting language that provides easy ways to automate tasks across Google products and third party services and build web applications.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">google sheets</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">google sheets</span> - Adobe Photoshop is a raster graphics editor developed and published by Adobe Systems for macOS and Windows.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">google sheets</span> - A seemingly simple spreadsheet application that can actually rock the whole world, one cell at a time!</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">excel</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">excel</span> - Adobe Photoshop is a raster graphics editor developed and published by Adobe Systems for macOS and Windows.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">excel</span> - The original powerhouse spreadsheet application, my first love.</dd>
                                 </div>
                                 <!-- end skill term -->
                                 <!-- skill term -->
                                 <div class="coda-skill-term-box">
                                     <dt class="coda-skill-term-name"><span class="coda-underscore">adobe creative suite</span></dt>
-                                    <dd class="coda-skill-term-description"><span class="coda-term-name">adobe creative suite</span> - Adobe Illustrator is a vector graphics editor developed and marketed by Adobe Systems.</dd>
+                                    <dd class="coda-skill-term-description"><span class="coda-term-name">adobe creative suite</span> - I am versatile in Illustrator, XD, Audition, and Premiere Pro.
+                                    </dd>
                                 </div>
                                 <!-- end skill term -->
                             </dl>
@@ -1316,7 +1317,7 @@
                                 </header>
                                 <p>Music is Auditory Art involving logic, problem solving, mathematics, timing, inspiration and creativity.</p>
                                 <p>I believe I am a better Digital Product Manager because of my musical endeavors.</p>
-                                <p>Here are a few examples of my work.</p>
+                                <p><a href="https://soundcloud.com/roman-y-kolyvanov">Here</a> are a few examples of my work.</p>
                                 <footer class="coda-pop-up-footer">
                                     <dl class="coda-description-container">
                                         <div class="coda-description-item">
@@ -1341,7 +1342,7 @@
                         </div>
                         <div class="col-md-6 col-lg-5 col-12">
                             <div class="coda-sticky">
-                                <img class="coda-img-responsive" src="img/demo-img.jpg" alt="text">
+                                <img class="coda-img-responsive" src="soundcloudlogo.jpeg" alt="soundcloud2">
                             </div>
                         </div>
                     </div>
