--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
     <body id="coda-body" class="coda-blue-color-scheme">
 
-        <!-- Start Preloader
+        <!-- Start Preloader -->
         <div id="preloader" class="coda-preloader">
             <div class="coda-loader">
                 <span id="coda-percent" class="coda-percentage"></span>
                 <div class="coda-loader-bar"></div>
             </div>
         </div>
-        End Preloader -->
+        <!-- End Preloader -->
 
         <!-- Start Navigation (Pop-up window) -->
         <div id="menu" class="coda-pop-up-window coda-menu">
@@ -639,7 +639,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 col-12">
-                            <p class="coda-footer-copyright">Copyright &copy; 2019</p>
+                            <p class="coda-footer-copyright">Copyright &copy; 2018</p>
                         </div>
                         <div class="col-md-6 col-12">
                             <h4 class="coda-footer-info">roman@kolyvanov.com</h4>
