--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
         <!-- Start Main content -->
         <main class="coda-main-content">
             <!-- Start Header -->
-            <header id="coda-about" class="coda-header" style="background-image: url(img/roma3b.jpg);" >
+            <header id="coda-about" class="coda-header" style="background-image: url(img/roma7.png);" >
                 <!-- header background image -->
-                <img class="coda-background-img" align=right src="img/roma3b.jpg" alt="header image">
+                <img class="coda-background-img" align=right src="img/roma7.png" alt="header image">
                 <div class="coda-top-panel">
                     <div class="container">
                         <div class="row align-items-center justify-content-between">
@@ -639,7 +639,7 @@
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-md-6 col-12">
-                            <p class="coda-footer-copyright">Copyright &copy; 2019</p>
+                            <p class="coda-footer-copyright">Copyright &copy; 2020</p>
                         </div>
                         <div class="col-md-6 col-12">
                             <h4 class="coda-footer-info">roman@kolyvanov.com</h4>
